Package: R.rsp
==============

Version: 0.18.1 [2014-05-16]
o Now using withCapture() in vignettes replacing alias evalCapture().
o Bumped up package dependencies.


Version: 0.18.0 [2014-05-07]
o CLEANUP: R.oo package is no longer attached when attaching this package.


Version: 0.17.3 [2014-05-05]
o rfile() now assumes an RSP document when it cannot infer the type from
  the filename etc.


Version: 0.17.2 [2014-05-02]
o CLEANUP: Removed evalWithEcho(), which has been deprecated since 2011.
o Using R.utils::use() instead of library() in more RSP documents.


Version: 0.17.1 [2014-04-30]
o Added vignette engine 'R.rsp::asis' to include static PDFs and HTMLs.
o DOCUMENTATION: Restructured and updated the R.rsp vignettes.


Version: 0.17.0 [2014-04-29]
o Now suggested packages are installed automagically, iff needed.
  This minimizes the need for preinstalling packages whenever using
  R.rsp to compile documents.


Version: 0.16.0 [2014-04-18]
o Now all rfile() also works with URLs for all known processors, e.g.
  rfile("http://latex-project.org/guides/usrguide.tex") and
  rfile("https://raw.github.com/yihui/knitr-examples/master/001-minimal.Rmd").
  Added package system tests for various types of "online" compilation.
o Now rspTangle() passes '...' to rsource().
o BUG FIX: RspFileProduct would corrupt URLs.


Version: 0.15.2 [2014-04-06]
o ROBUSTNESS: Now compileLaTeX() cleans up and shortens LaTeX
  environment variables (e.g. TEXINPUTS) iff possible,
  before compiling the document.  This lowers the risk for
  compilation failures due to too long search paths.


Version: 0.15.1 [2014-03-24]
o ROBUSTNESS: Now compileLaTeX() tries to shorten any paths as far
  as possible, e.g. ../foo/../foo/ to ../foo/ to workaround possible
  length limits of the TeX compiler.  It now also adds a symbolic link
  to TEXINPUTS that refers to the directory of the LaTeX file.
o WORKAROUND: On Windows, due to limitations in browseURL(..., browser=NULL),