@@ -48,6 +48,7 @@ importFrom("R.utils", "capture")
 importFrom("R.utils", "cat") ## Multi-sources: R.utils, base
 importFrom("R.utils", "cmdArgs")
 importFrom("R.utils", "createLink")
+importFrom("R.utils", "copyFile")
 importFrom("R.utils", "displayCode")
 importFrom("R.utils", "downloadFile")
 importFrom("R.utils", "enter")
@@ -75,9 +76,16 @@ importFrom("R.utils", "removeDirectory")
 importFrom("R.utils", "renameFile")
 importFrom("R.utils", "sourceTo")
 importFrom("R.utils", "tempvar")
+importFrom("R.utils", "touchFile")
 importFrom("R.utils", "withoutGString")
 importFrom("R.utils", "CmdArgsFunction")
 importFrom("R.utils", "use")
+
+importFrom("tools", "file_ext")
+importFrom("tools", "file_path_sans_ext")
+importFrom("tools", "file_path_as_absolute")
+importFrom("tools", "texi2dvi")
+importFrom("tools", "texi2pdf")
 
 importFrom("utils", "browseURL")
 importFrom("utils", "capture.output")
